Test files are refactored.